@startuml
hide empty members


class GuiView{
}

package language {
    note left of LanguageHandler
    LanguageHandler parser en csv
    fil og holder styr på alt tekst.
    Hvis vi giver den enumen
    Language.ENGLISH så læser den,
    den engelske tekst ind fra csv filen.
    end note
class LanguageHandler {
    - EnumMap<Message.Type,String> languageMap
    + {static} LanguageHandler getLanguageHandler(Language)
    - {static} EnumMap<Message.Type,String> createDictionary(String)
    + String getMessage(Message)
}
enum Language {
    +  ENGLISH
    +  SWEDISH
    + {static} Language getLanguageEnum(String)
    + {static} String[] getLanguages()
}
class Message {
    - String[] args
    - Type type
    + {static} Message remainingPlayers(String)
    + {static} Message payRent(String,String,String)
    + {static} Message rollDice(String)
    + {static} Message of(Type,String)
    + Type getType()
    + String[] getArgs()
}

enum Type {
    +  GAME_OVER_MESSAGE
    +  PAY_RENT
    +  ROLL_DICE
}
}
Message +-right- Type :Type is an \ninner enum
LanguageHandler o-- Language
LanguageHandler o-- Message
GuiView o-- LanguageHandler

@enduml